--- a/carp-support/carp-generator/pom.xml
+++ b/carp-support/carp-generator/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-support</artifactId>
-        <version>0.0.15-SNAPSHOT</version>
+        <version>0.0.15</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-generator</artifactId>
