--- a/carp-modules/carp-module-http-sync/carp-module-http-framework/pom.xml
+++ b/carp-modules/carp-module-http-sync/carp-module-http-framework/pom.xml
@@ -31,6 +31,14 @@
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-metrics</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-framework-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-framework-mybatis</artifactId>
         </dependency>
         <dependency>
