--- a/carp-modules/carp-module-scheduler/carp-module-scheduler-manage/pom.xml
+++ b/carp-modules/carp-module-scheduler/carp-module-scheduler-manage/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-module-scheduler</artifactId>
-        <version>0.0.16-SNAPSHOT</version>
+        <version>0.0.16</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>carp-module-scheduler-manage</artifactId>
