--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,12 @@
         <snapshotRepository>
             <id>sonatype-nexus</id>
             <name>Sonatype Nexus Snapshots</name>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+            <url>https://central.sonatype.org</url>
         </snapshotRepository>
         <repository>
             <id>sonatype-nexus</id>
             <name>Sonatype Nexus Release</name>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <url>https://central.sonatype.org</url>
         </repository>
     </distributionManagement>
 
@@ -445,7 +445,8 @@
                         <version>0.6.0</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <publishingServerId>central</publishingServerId>
+                            <!-- sonatype-nexus 和 github workflow，distributionManagement 都是一一对应的，勿改-->
+                            <publishingServerId>sonatype-nexus</publishingServerId>
                             <autoPublish>true</autoPublish>
                             <waitUntil>uploaded</waitUntil>
                         </configuration>
