--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ name: CI
 on:
   push:
     paths-ignore: [ 'docs/**', '**/*.md', '**/*.drawio', '**/*.svg' ]
+    branches:
+      - '*'
   pull_request:
     paths-ignore: [ 'docs/**', '**/*.md', '**/*.drawio', '**/*.svg' ]
   schedule:
