feature: upgrade to carp-framework-feign

--- a/carp-modules/carp-module-http-sync/carp-module-http-remote/carp-module-http-remote-jst/pom.xml
+++ b/carp-modules/carp-module-http-sync/carp-module-http-remote/carp-module-http-remote-jst/pom.xml
@@ -34,8 +34,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>carp-module-http-remote-feign</artifactId>
+            <groupId>cn.sliew</groupId>
+            <artifactId>carp-framework-feign</artifactId>
         </dependency>
     </dependencies>
 </project>
