--- a/carp-modules/carp-module-datasource/pom.xml
+++ b/carp-modules/carp-module-datasource/pom.xml
@@ -37,6 +37,11 @@
             <groupId>cn.sliew</groupId>
             <artifactId>carp-framework-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.gravitino</groupId>
+            <artifactId>client-java-runtime</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
