--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 
         <auto-service.version>1.1.1</auto-service.version>
         <pf4j.version>3.12.1</pf4j.version>
+        <gravitino.version>0.7.0-incubating</gravitino.version>
     </properties>
 
     <dependencyManagement>
@@ -192,6 +193,12 @@
                 <groupId>${project.groupId}</groupId>
                 <artifactId>carp-server</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.gravitino</groupId>
+                <artifactId>client-java-runtime</artifactId>
+                <version>${gravitino.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
