feature: replace PageUtil

--- a/carp-dist/pom.xml
+++ b/carp-dist/pom.xml
@@ -35,6 +35,10 @@
     <dependencies>
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-plugin-jdbc-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-plugin-test-api</artifactId>
         </dependency>
 
