--- a/carp-plugins/carp-plugin-jdbc/carp-plugin-jdbc-api/pom.xml
+++ b/carp-plugins/carp-plugin-jdbc/carp-plugin-jdbc-api/pom.xml
@@ -22,16 +22,24 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-plugin-jdbc</artifactId>
         <version>0.0.21</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-plugins</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-plugin-jdbc-api</artifactId>
 
-    <modules>
-        <module>carp-plugin-jdbc</module>
-        <module>carp-plugin-test</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.pf4j</groupId>
+            <artifactId>pf4j</artifactId>
+            <!-- !!! VERY IMPORTANT -->
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-datasource</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
