--- a/carp-modules/carp-module-dataservice/pom.xml
+++ b/carp-modules/carp-module-dataservice/pom.xml
@@ -22,24 +22,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp</artifactId>
+        <artifactId>carp-modules</artifactId>
         <version>0.0.21</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-modules</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-module-dataservice</artifactId>
 
-    <modules>
-        <module>carp-module-alert</module>
-        <module>carp-module-dataservice</module>
-        <module>carp-module-datasource</module>
-        <module>carp-module-http-sync</module>
-        <module>carp-module-persistence</module>
-        <module>carp-module-plugin</module>
-        <module>carp-module-queue</module>
-        <module>carp-module-scheduler</module>
-        <module>carp-module-security</module>
-        <module>carp-module-system</module>
-        <module>carp-module-workflow</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-datasource</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
