feature: update carp-module-plugin module

--- a/carp-plugins/carp-plugin-test/carp-plugin-test-1/src/main/resources/plugin.properties
+++ b/carp-plugins/carp-plugin-test/carp-plugin-test-1/src/main/resources/plugin.properties
@@ -1,6 +1,6 @@
-plugin.id=hello-plugin
+plugin.id=a83c70ad7de344a4a06c7c2d46d4265a
 plugin.class=cn.sliew.carp.plugin.test.HelloPlugin
-plugin.version=0.0.1-SNAPSHOT
+plugin.version=0.0.23
 plugin.description=hello demo plugin
 plugin.provider=carp
 plugin.license=Apache-2.0
