--- a/carp-plugins/carp-plugin-test/carp-plugin-test-2/src/main/resources/plugin.properties
+++ b/carp-plugins/carp-plugin-test/carp-plugin-test-2/src/main/resources/plugin.properties
@@ -1,6 +1,6 @@
-plugin.id=welcome-plugin
+plugin.id=0763a517723f4550a1f3afa665feee1e
 plugin.class=cn.sliew.carp.plugin.test.WelcomePlugin
-plugin.version=0.0.1-SNAPSHOT
+plugin.version=0.0.23
 plugin.description=welcome demo plugin
 plugin.provider=carp
 plugin.license=Apache-2.0
