--- a/carp-modules/carp-module-plugin/pom.xml
+++ b/carp-modules/carp-module-plugin/pom.xml
@@ -56,5 +56,10 @@
             <groupId>org.pf4j</groupId>
             <artifactId>pf4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.pf4j</groupId>
+            <artifactId>pf4j-spring</artifactId>
+            <version>0.9.0</version>
+        </dependency>
     </dependencies>
 </project>
