--- a/carp-ui/package.json
+++ b/carp-ui/package.json
@@ -52,6 +52,7 @@
     "dayjs": "^1.11.10",
     "numeral": "^2.0.6",
     "omit.js": "^2.0.2",
+    "query-string": "^9.1.1",
     "querystring": "^0.2.1",
     "rc-util": "^5.38.1",
     "react": "^18.2.0",
