--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,12 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>carp-module-scheduler-api</artifactId>
+                <artifactId>carp-module-scheduler-executor-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-scheduler-executor-java</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
