--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-scheduler-executor-orca</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-scheduler-manage</artifactId>
                 <version>${project.version}</version>
             </dependency>
