feature: add carp-framework-id dependency

--- a/carp-modules/carp-module-orca/carp-module-orca-api/pom.xml
+++ b/carp-modules/carp-module-orca/carp-module-orca-api/pom.xml
@@ -56,6 +56,10 @@
             <groupId>cn.sliew</groupId>
             <artifactId>carp-framework-dag</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.sliew</groupId>
+            <artifactId>carp-framework-id</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>de.huxhorn.sulky</groupId>
