--- a/carp-orca/carp-orca-api/pom.xml
+++ b/carp-orca/carp-orca-api/pom.xml
@@ -26,7 +26,7 @@
         <version>0.0.34</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-orca-api</artifactId>
+    <artifactId>carp-orca-api</artifactId>
 
     <properties>
         <ulid.version>8.3.0</ulid.version>
