--- a/carp-orca/pom.xml
+++ b/carp-orca/pom.xml
@@ -26,7 +26,7 @@
         <version>0.0.34</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-orca</artifactId>
+    <artifactId>carp-orca</artifactId>
     <packaging>pom</packaging>
 
     <modules>
