--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -51,12 +51,12 @@ jobs:
       - name: Upload dist
         uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: dist-${{ matrix.os }}-${{ matrix.jdk }}
           path: |
             carp-dist/target/carp-*.tar.gz
       - name: Output dist name
         id: output-dist-name
-        run: echo "dist_name=dist" >> $GITHUB_OUTPUT
+        run: echo "dist_name=dist-${{ matrix.os }}-${{ matrix.jdk }}" >> $GITHUB_OUTPUT
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
