--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -19,6 +19,13 @@ name: CI-Maven
 on:
   workflow_dispatch:
   workflow_call:
+    inputs:
+      os:
+        required: true
+        type: string
+      jdk:
+        required: true
+        type: string
     outputs:
       dist_name:
         description: "carp-dist output name"
@@ -31,7 +38,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         jdk: [ 17 ]
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ inputs.os }}
     outputs:
       dist_name: ${{ steps.output-dist-name.outputs.dist_name }}
     steps:
@@ -39,10 +46,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - name: Setup Java JDK ${{ matrix.jdk }}
+      - name: Setup Java JDK ${{ inputs.jdk }}
         uses: actions/setup-java@v4
         with:
-          java-version: ${{ matrix.jdk }}
+          java-version: ${{ inputs.jdk }}
           distribution: temurin
           cache: maven
       - name: Build with Maven
@@ -51,12 +58,12 @@ jobs:
       - name: Upload dist
         uses: actions/upload-artifact@v4
         with:
-          name: dist-${{ matrix.os }}-${{ matrix.jdk }}
+          name: dist-${{ inputs.os }}-${{ inputs.jdk }}
           path: |
             carp-dist/target/carp-*.tar.gz
       - name: Output dist name
         id: output-dist-name
-        run: echo "dist_name=dist-${{ matrix.os }}-${{ matrix.jdk }}" >> $GITHUB_OUTPUT
+        run: echo "dist_name=dist-${{ inputs.os }}-${{ inputs.jdk }}" >> $GITHUB_OUTPUT
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
