--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,15 @@ on:
 jobs:
 
   build_maven:
+    if: github.repository == 'flowerfine/carp'
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        jdk: [ 17 ]
     uses: ./.github/workflows/ci-maven.yml
+    with:
+      os: ${{ matrix.os }}
+      jdk: ${{ matrix.jdk }}
 
   output_test:
     runs-on: ubuntu-latest
