--- a/.github/workflows/ci-maven.yml
+++ b/.github/workflows/ci-maven.yml
@@ -34,10 +34,10 @@ on:
 jobs:
   build:
     if: github.repository == 'flowerfine/carp'
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        jdk: [ 17 ]
+#    strategy:
+#      matrix:
+#        os: [ ubuntu-latest, macos-latest, windows-latest ]
+#        jdk: [ 17 ]
     runs-on: ${{ inputs.os }}
     outputs:
       dist_name: ${{ steps.output-dist-name.outputs.dist_name }}
