--- a/.github/workflows/ci-maven-snippet.yml
+++ b/.github/workflows/ci-maven-snippet.yml
@@ -56,6 +56,7 @@ jobs:
           name: dist-${{ inputs.os }}-${{ inputs.jdk }}
           path: |
             carp-dist/target/carp-*.tar.gz
+          retention-days: 3
       - name: Output dist name
         id: output-dist-name
         run: echo "dist_name=dist-${{ inputs.os }}-${{ inputs.jdk }}" >> $GITHUB_OUTPUT
