--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-orca-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-persistence</artifactId>
                 <version>${project.version}</version>
             </dependency>
