feature: update orca detail web

--- a/carp-ui/package.json
+++ b/carp-ui/package.json
@@ -45,6 +45,7 @@
     "@antv/l7": "^2.20.13",
     "@antv/l7-maps": "^2.20.13",
     "@antv/l7-react": "^2.4.3",
+    "@antv/xflow": "^2.1.13",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.12.7",
     "antd-style": "^3.6.1",
