feature: update x6 dag web

--- a/carp-ui/package.json
+++ b/carp-ui/package.json
@@ -45,12 +45,19 @@
     "@antv/l7": "^2.20.13",
     "@antv/l7-maps": "^2.20.13",
     "@antv/l7-react": "^2.4.3",
+    "@antv/layout": "^1.2.14-beta.8",
+    "@antv/x6-plugin-selection": "^2.2.2",
+    "@antv/x6-react-components": "^2.0.8",
     "@antv/xflow": "^2.1.13",
+    "@antv/xflow-diff": "^1.0.0",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.12.7",
     "antd-style": "^3.6.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "highlight": "^0.2.4",
+    "highlight.js": "^11.11.1",
+    "insert-css": "^2.0.0",
     "numeral": "^2.0.6",
     "omit.js": "^2.0.2",
     "query-string": "^9.1.1",
