--- a/carp-modules/carp-module-workflow/carp-module-workflow-stage/pom.xml
+++ b/carp-modules/carp-module-workflow/carp-module-workflow-stage/pom.xml
@@ -22,17 +22,20 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.sliew</groupId>
-        <artifactId>carp-modules</artifactId>
+        <artifactId>carp-module-workflow</artifactId>
         <version>0.0.34</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>carp-module-workflow</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>carp-module-workflow-stage</artifactId>
 
-    <modules>
-        <module>carp-module-workflow-api</module>
-        <module>carp-module-workflow-internal</module>
-        <module>carp-module-workflow-stage</module>
-    </modules>
+    <properties>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>cn.sliew</groupId>
+            <artifactId>carp-framework-pf4j</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
