--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>cn.sliew</groupId>
         <artifactId>carp-spring-boot-parent</artifactId>
-        <version>0.0.42</version>
+        <version>0.0.43</version>
     </parent>
     <groupId>cn.sliew</groupId>
     <artifactId>carp</artifactId>
@@ -203,6 +203,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-workflow-internal</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-workflow-stage</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
