--- a/carp-modules/carp-module-workflow/pom.xml
+++ b/carp-modules/carp-module-workflow/pom.xml
@@ -32,6 +32,7 @@
     <modules>
         <module>carp-module-workflow-api</module>
         <module>carp-module-workflow-internal</module>
+        <module>carp-module-workflow-stage</module>
     </modules>
 
 </project>
