--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,11 @@
                 <artifactId>carp-module-workflow-internal</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-workflow-stage</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
