feature: add stage definition

--- a/carp-modules/carp-module-workflow/carp-module-workflow-stage/pom.xml
+++ b/carp-modules/carp-module-workflow/carp-module-workflow-stage/pom.xml
@@ -34,6 +34,10 @@
     <dependencies>
         <dependency>
             <groupId>cn.sliew</groupId>
+            <artifactId>carp-framework-dag</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.sliew</groupId>
             <artifactId>carp-framework-pf4j</artifactId>
         </dependency>
     </dependencies>
