--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>carp-module-dag</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>carp-module-dataservice</artifactId>
                 <version>${project.version}</version>
             </dependency>
