--- a/carp-modules/carp-module-dag/pom.xml
+++ b/carp-modules/carp-module-dag/pom.xml
@@ -29,7 +29,7 @@
     <artifactId>carp-module-dag</artifactId>
 
     <properties>
-
+        <uuid-creator.version>6.0.0</uuid-creator.version>
     </properties>
 
     <dependencies>
