--- a/carp-modules/carp-module-dag/pom.xml
+++ b/carp-modules/carp-module-dag/pom.xml
@@ -45,6 +45,10 @@
             <groupId>cn.sliew</groupId>
             <artifactId>carp-framework-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.sliew</groupId>
+            <artifactId>carp-framework-pf4j</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>${project.parent.groupId}</groupId>
