--- a/carp-modules/carp-module-dag/pom.xml
+++ b/carp-modules/carp-module-dag/pom.xml
@@ -54,6 +54,10 @@
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>carp-module-queue-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>carp-module-workflow-stage</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
